update model building notebook

--- a/Predicting Water Point Functionality - Model Building.ipynb
+++ b/Predicting Water Point Functionality - Model Building.ipynb
@@ -4,16 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Predicting Water Point Functionalit - Model Building\n",
-    "\n",
-    "Introductory Text"
+    "# Predicting Water Point Functionality - Model Building"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Package Loading"
+    "## Loading Packages"
    ]
   },
   {
@@ -58,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Load the challenge's train and test sets data, after completing cleaning and feature engineering using MySQL**"
+    "**Load the challenge's train and test sets data, after completing cleaning and feature engineering using mySQL**"
    ]
   },
   {
@@ -389,9 +387,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Best Random Forest Model\n",
-    "\n",
-    "Explanatory text"
+    "## Best Random Forest Model"
    ]
   },
   {
@@ -616,17 +612,6 @@
     "write.csv(rf.challenge_format, file = \"rf_predictions.csv\",row.names=FALSE)\n",
     "\n",
     "head(rf.challenge_format)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Use matplotlib image display to show image of results"
    ]
   },
   {
@@ -898,9 +883,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Best Support Vector Machine Model\n",
-    "\n",
-    "Explanatory text"
+    "## Best Support Vector Machine Model"
    ]
   },
   {
@@ -1127,9 +1110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Model Comparison\n",
-    "\n",
-    "Explanatory text"
+    "## Model Comparison"
    ]
   },
   {
